# tasker

./: .flake8  .gitignore  CLAUDE.md  DESIGN.md  README.md  pyproject.toml  tox.ini
example/planning/: s02-basic-story-support.md
planning/: s01-support-bullet-list-subtasks.md  s02-tasks-forkflow-startstopdone.md  s03-tasks-upgrading.md  s04-task-editing.md  s04-task-updating.md  s05-story-cache.md  s06-add-assertwordsinmessage-helper.md  s07-refactor-commands-split-them-to.md  s08-recent-shortcut.md  s09-support-move-command-that-attaches.md  s10-task-validation.md  s11-tasks-archivation.md  s12-ideas.md  s13-refactoring.md  s14-add-edit-command-that-changed.md  s14-edit-command.md
planning/archive/: s04-task-editing.md  s06-add-assertwordsinmessage-helper.md
planning/s03-tasks-upgrading/: README.md  s03t03-add-edit-command-that-changed.md
planning/s12-ideas/: README.md  s12t03-recent-shortcut.md
src/tasker/: __init__.py  _exceptions.py  _story_utils.py  main.py  (+7 more)
tasker/: s09-move-command.md  s10-task-validation.md  s11-tasks-archivation.md  s15-recent-shortcut.md  s16-show-command.md  s17-list-command.md  s17-task-degradation.md
tests/: conftest.py  helpers.py  test_add_task.py  test_archive_task.py  test_batch_add.py  test_cancel_task.py  test_edit_task.py  test_errors.py  test_finish_task.py  test_hello.py  test_helpers.py  test_json_output.py  test_list_tasks.py  test_move_task.py  test_multi_ref.py  test_new_task.py  test_parse_task.py  test_parse_task_ref.py  test_recent.py  test_reset_task.py  test_show_task.py  test_start_task.py  test_task_repo.py
(+54 files in other folders)
