[project]
name = "tasker"
version = "0.1.0"
description = "Simple file-based task tracker for git repos"
authors = [
    {name = "Evgeniy A. Cymbalyuk",email = "cimbaluk@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
